syntax = "proto3";

service Hello {
  rpc sayHello (HelloRequest) returns (HelloReply) {}

  rpc sayHelloStream(stream HelloRequest) returns (stream HelloReply) {}
}

message HelloRequest {
  string message = 1;
}

message HelloReply {
  string message = 1;
}

service HelloPBController {

   rpc pbhello(HelloPBRequest) returns(HelloPBReply) {}
}

message HelloPBRequest {
  string message = 1;
}

message HelloPBReply {
  uint32 code = 1;
  string data = 2;
}